Hopefully fix Vertical Nav Bar squishing

--- a/scss/_module_verticalnavbar.scss
+++ b/scss/_module_verticalnavbar.scss
@@ -77,6 +77,7 @@ https://gamebanana.com/mods/305429 */
 
 .appdetailsprimarylinkssection_LinkInner_7k4qm {
   padding: 0px !important;
+  top: 0px !important;
 }
 
 .appdetailsprimarylinkssection_Links_DgVQa {
